--- a/app/globals.css
+++ b/app/globals.css
@@ -1529,7 +1529,7 @@ button {
 }
 
 .steps-robotics-others {
-  background-image: url('/others.svg');
+  background-image: url('/other.svg');
   background-position: center;
   background-repeat: no-repeat;
   background-size: contain;
@@ -3161,7 +3161,9 @@ li {
       bottom: 10px !important;
       top: auto !important;
     }
-
+.join-title {
+  font-size: 20px !important;
+}
     .contact-heroic-image {
       width: 351px !important;
       height: auto !important;
