--- a/app/component/css/Enquiry.css
+++ b/app/component/css/Enquiry.css
@@ -8,7 +8,7 @@
 
   .popup-min-heigh{
     height: auto !important;
-    margin-top: -150px !important;
+    margin-top: -110px !important;
 
   }
   .enquiry-main-title {
@@ -81,6 +81,9 @@
   .enquiry-main-title {
     font-size: 16px !important;
   }
+  .book-trail-popup {
+	background-image: url("/enquirypop.jpg");
+}
 
   .enquiry-main-subtitle {
     font-size: 12px !important;
@@ -106,7 +109,7 @@
   }
    .popup-min-heigh{
     height: auto !important;
-    margin-top: -130px !important;
+    margin-top: -100px !important;
   }
 }
 
